# trellio

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: 2026-04-12-security-and-quality-audit.md
docs/adr/: 001-custom-mock-server.md  002-mock-server-selection.md  003-failure-path-enumeration.md
features/: attachments.feature  authentication.feature  boards.feature  cards.feature  checklists.feature  comments.feature  connection.feature  download_attachment.feature  environment.py  labels.feature  large_payload.feature  lists.feature  logging.feature  members.feature  pagination.feature  retry.feature  search.feature  timeout.feature  upload_attachment.feature  webhooks.feature
features/steps/: attachment_steps.py  auth_steps.py  board_steps.py  card_steps.py  checklist_steps.py  comment_steps.py  common_steps.py  connection_steps.py  download_attachment_steps.py  label_steps.py  large_payload_steps.py  list_steps.py  logging_steps.py  member_steps.py  pagination_steps.py  retry_steps.py  search_steps.py  timeout_steps.py  trellio_steps.py  upload_attachment_steps.py  webhook_steps.py
src/trellio/: __init__.py  client.py  errors.py  models.py
tests/: mock_server.py
tests/validation/: test_mock_with_pytrello.py
