[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trellio"
version = "1.0.0"
description = "Async Trello API client for Python"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
